Fix some sidebar positioning issues on firefox. Apparently the default size for textboxes in Firefox is humongous compared to Chrome

--- a/fuzzopress/blog/static/css/main.less
+++ b/fuzzopress/blog/static/css/main.less
@@ -281,9 +281,13 @@ header {
     position: fixed;
     text-align: center;
     top: 20px;
+    width: 202px;
 
     a {
         display: block;
+    }
+    input[type=text] {
+        width: 72%;
     }
     section {
         margin-bottom: 20px;
@@ -344,12 +348,12 @@ footer {
         position: absolute;
     }
 }
-@media(max-width: 1210px) {
+@media(max-width: 1240px) {
     .secondary-menu {
         left: 0;
     }
 }
-@media(max-width: 1100px) {
+@media(max-width: 1120px) {
     .secondary-menu {
         width: 160px;
         left: 0;
@@ -369,12 +373,12 @@ footer {
         }
     }
 }
-@media(max-width: 980px) {
+@media(max-width: 1000px) {
     .secondary-menu {
         width: 120px;
     }
 }
-@media(max-width: 890px) {
+@media(max-width: 920px) {
     body {
         margin: 20px auto 40px;
     }
